add play and pause button for testing

--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,11 @@
     <main>
       <button class="btn btn-primary" id="login">Don't see anything? Log in!</button>
       <a href="/logout" class="btn btn-secondary">Logout</a>
+      <div>
+        <a href="/play" class="btn btn-primary">Play</a>
+        <a href="/pause" class="btn btn-primary">Pause</a>
+      </div>
+      
       <div id="data-container">
         <ol>
           <!-- This is where we will append our data -->
