add new html views and refactoring code to a single server file

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -21,4 +21,16 @@
   .nicejob {
     text-decoration: line-through;
   }
+
+  .logoutBtn {
+    position: absolute;
+    top: 80px;
+    right: 50px;
+  }
+
+  .leaveRoomBtn {
+    position: absolute;
+    top: 140px;
+    right: 50px;
+  }
   
