--- a/client/views/room.html
+++ b/client/views/room.html
@@ -21,7 +21,13 @@
     </header>
 
     <main>
-      <button class="btn btn-primary" id="login">Log in with Spotify</button>
+      <a href="/logout" class="btn btn-secondary logoutBtn">Logout</a>
+      <a class="btn btn-secondary leaveRoomBtn" id="leaveRoom">Leave Room</a>
+      <div>
+        <a class="btn btn-primary" id="syncPlay">Sync Play</a>
+        <a class="btn btn-primary" id="play">Play</a>
+        <a class="btn btn-primary" id="pause">Pause</a>
+      </div>
       
       <div id="data-container">
         <ol>
