--- a/client/views/home.html
+++ b/client/views/home.html
@@ -21,7 +21,18 @@
     </header>
 
     <main>
-      <button class="btn btn-primary" id="login">Log in with Spotify</button>
+      <a href="/logout" class="btn btn-secondary logoutBtn">Logout</a>
+      <a class="btn btn-secondary" id="test">Test</a>
+      <div>
+        <a class="btn btn-primary" id="create">Create</a>
+        <form id="join">
+          <div class="form-group">
+            <label for="roomCode">Room Code</label>
+            <input type="text" class="form-control" id="roomCode"  placeholder="Enter room code">   
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
       
       <div id="data-container">
         <ol>
