add play/pause button for testing spotify api

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -24,13 +24,13 @@
       <a href="/logout" class="btn btn-secondary logoutBtn">Logout</a>
       <a class="btn btn-secondary" id="test">Test</a>
       <div>
-        <a class="btn btn-primary" id="create">Create</a>
+        <a class="btn btn-primary" id="create">Create a Room</a>
         <form id="join">
           <div class="form-group">
             <label for="roomCode">Room Code</label>
             <input type="text" class="form-control" id="roomCode"  placeholder="Enter room code">   
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Join Room</button>
         </form>
       </div>
       
