--- a/client/views/home.html
+++ b/client/views/home.html
@@ -22,10 +22,11 @@
 
     <main>
       <a href="/logout" class="btn btn-secondary logoutBtn">Logout</a>
-      <a class="btn btn-secondary" id="test">Test</a>
-      <div>
+      <div class="create-section">
         <a class="btn btn-primary" id="create">Create a Room</a>
-        <form id="join">
+      </div>
+      <div class="join-section"> 
+        <form>
           <div class="form-group">
             <label for="roomCode">Room Code</label>
             <input type="text" class="form-control" id="roomCode"  placeholder="Enter room code">   
