add home page formating for buttons

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -23,9 +23,13 @@
     <main>
       <a href="/logout" class="btn btn-secondary logoutBtn">Logout</a>
       <div class="create-section">
-        <a class="btn btn-primary" id="create">Create a Room</a>
+        <h3> Create Room</h3>
+        <p class="text-justify"> Create a room and invite your friends to listen in sync</p>
+        <a class="btn btn-primary" id="create">Create Room</a>
       </div>
       <div class="join-section"> 
+        <h3> Join Room </h3>
+        <p class="text-justify"> Join an existing room via room code to listen in sync</p>
         <form>
           <div class="form-group">
             <label for="roomCode">Room Code</label>
