--- a/client/views/home.html
+++ b/client/views/home.html
@@ -30,7 +30,7 @@
       <div class="join-section"> 
         <h3> Join Room </h3>
         <p class="text-justify"> Join an existing room via room code to listen in sync</p>
-        <form>
+        <form id="join">
           <div class="form-group">
             <label for="roomCode">Room Code</label>
             <input type="text" class="form-control" id="roomCode"  placeholder="Enter room code">   
