refactor structure and implement logout functionality

--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-      <a href="/logout" class="btn btn-secondary logoutBtn">Logout</a>
+      <a class="btn btn-secondary logoutBtn" id="logout">Logout</a>
       <div class="create-section">
         <h3> Create Room</h3>
         <p class="text-justify"> Create a room and invite your friends to listen in sync</p>
