--- a/views/room.html
+++ b/views/room.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-      <a href="/logout" class="btn btn-secondary logoutBtn">Logout</a>
+      <a class="btn btn-secondary logoutBtn" id="logout">Logout</a>
       <a class="btn btn-secondary leaveRoomBtn" id="leaveRoom">Leave Room</a>
       <div>
         <a class="btn btn-primary" id="syncPlay">Sync Play</a>
