add media control functions to room view

--- a/views/room.html
+++ b/views/room.html
@@ -26,15 +26,15 @@
       <a class="btn btn-secondary leaveRoomBtn" id="leaveRoom">Leave Room</a>
       <div class="room-function-section">
         <div>
-          <p class="text-justify"> Sync all room members' Spotify devices</p>
-          <a class="btn btn-primary sync-button" id="syncPlay">Sync Play</a>
+          <h3 class="user-list-title">Media Control:</h3> 
         </div>
         <div>
-          <a class="btn btn-primary sync-button" id="syncPause">Sync Pause</a>
+          <a class="btn btn-primary sync-button" id="play">Play</a>
+          <a class="btn btn-primary sync-button" id="pause">Pause</a>
         </div>
         <div class="test-button">
-          <a class="btn btn-primary" id="play">Test Play</a>
-          <a class="btn btn-primary" id="pause">Test Pause</a>
+          <a class="btn btn-primary" id="previousTrack">Previous</a>
+          <a class="btn btn-primary" id="nextTrack">Next</a>
         </div>
         <div>
           
